--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="sk">
 <head>
     <meta charset="utf-8">
-    <title>Firemné neprítomnosti online, rýchly prehľad neprítomností vašich zamestnancov - Nepritomnost.sk</title>
+    <title>Firemné neprítomnosti online, rýchly prehľad vašich zamestnancov - Nepritomnost.sk</title>
     <meta name="description" content="Firemné neprítomnosti online. Získajte rýchly prehľad neprítomností všetkých zamestnancov alebo vybraných tímov. ">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/favico.ico?v=1">
@@ -33,7 +33,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <nav class="navbar navbar-expand-lg">
-                                <a class="navbar-brand" href="index.html">
+                                <a title="Nepritomnost.sk" class="navbar-brand" href="index.html">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-lg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                         <path stroke="none" d="M0 0h24v24H0z"></path>
                                         <path d="M5 11a7 7 0 0 1 14 0v7a1.78 1.78 0 0 1 -3.1 1.4a1.65 1.65 0 0 0 -2.6 0a1.65 1.65 0 0 1 -2.6 0a1.65 1.65 0 0 0 -2.6 0a1.78 1.78 0 0 1 -3.1 -1.4v-7">
@@ -52,19 +52,19 @@
                                 <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                     <ul id="nav" class="navbar-nav ml-auto">
                                         <li class="nav-item">
-                                            <a class="page-scroll" href="/index.html#features">Funkcie</a>
+                                            <a title="Funkie" class="page-scroll" href="/index.html#features">Funkcie</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="page-scroll" href="/index.html#prices">Cenník</a>
+                                            <a title="Cenník" class="page-scroll" href="/index.html#prices">Cenník</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="page-scroll" href="#about">Kontakt</a>
+                                            <a title="Kontakt" class="page-scroll" href="#about">Kontakt</a>
                                         </li>
                                     </ul>
                                 </div> <!-- navbar collapse -->
                                 
                                 <div class="navbar-btn d-none d-sm-inline-block">
-                                    <a class="main-btn" target="_blank" href="https://app.nepritomnost.sk">Prihlásenie →</a>
+                                    <a class="main-btn" title="Prihlásenie" target="_blank" href="https://app.nepritomnost.sk">Prihlásenie →</a>
                                 </div>
                             </nav> <!-- navbar -->
                         </div>
@@ -81,27 +81,25 @@
                         <div class="col-lg-12 p-0">
                             <div class="header-hero-content text-center">
                                 <h3 class="header-sub-title">firemné neprítomnosti online</h3>
-
-                                <h2 class="rotate">
-                                <div class="header-title text-uppercase rotate" data-delay="1200" data-words>
-                                    <span class="text-anim-items">
-                                    <span class="text-anim-item"><span>Jednoduché žiadanky</span></span>
-                                    <span class="text-anim-item"><span>Rýchle schvaĽovanie</span></span>
-                                    <span class="text-anim-item"><span>E-mailové notifikácie</span></span>
-                                    <span class="text-anim-item"><span>Nastavenia neprítomností</span></span>
-                                    <span class="text-anim-item"><span>Nastavenia voľných dní</span></span>
-                                    <span class="text-anim-item"><span>Nastavenia tímov</span></span>
-                                    <span class="text-anim-item"><span>Štatistiky neprítomností</span></span>
-                                    <span class="text-anim-item"><span>Adresár zamestnancov</span></span>
-                                    <span class="text-anim-item"><span>Dostupnosť zamestnanca</span></span>
-                                    <span class="text-anim-item"><span>Vlastné neprítomností</span></span>
-                                    </span>
-                                    <span class="anim-line"></span>
-                                </div>
-                                </h2>
-
-                                <p class="text mt-3 d-none" >webový a mobilný nástroj na správu neprítomnosti a dovolenky vášho tímu</p>
-                                <a href="https://app.nepritomnost.sk/register/" target="_blank" class="main-btn " >vytvor si svoj tím ↗</a>
+                                <h1 class="rotate">
+                                    <div class="header-title text-uppercase rotate" data-delay="1200" data-words>
+                                        <span class="text-anim-items">
+                                        <span class="text-anim-item"><span>Jednoduché žiadanky</span></span>
+                                        <span class="text-anim-item"><span>Rýchle schvaĽovanie</span></span>
+                                        <span class="text-anim-item"><span>E-mailové notifikácie</span></span>
+                                        <span class="text-anim-item"><span>Nastavenia neprítomností</span></span>
+                                        <span class="text-anim-item"><span>Nastavenia voľných dní</span></span>
+                                        <span class="text-anim-item"><span>Nastavenia tímov</span></span>
+                                        <span class="text-anim-item"><span>Štatistiky neprítomností</span></span>
+                                        <span class="text-anim-item"><span>Adresár zamestnancov</span></span>
+                                        <span class="text-anim-item"><span>Dostupnosť zamestnanca</span></span>
+                                        <span class="text-anim-item"><span>Vlastné neprítomností</span></span>
+                                        </span>
+                                        <span class="anim-line"></span>
+                                    </div>
+                                </h1>
+                                <p class="text mt-3 d-none" >webový a mobilný nástroj na správu neprítomnosti a dovoleniek vášho tímu</p>
+                                <a title="registrácia" href="https://app.nepritomnost.sk/register/" target="_blank" class="main-btn " >vytvor si svoj tím ↗</a>
                             </div> <!-- header hero content -->
                         </div>
                     </div> <!-- row -->
@@ -182,7 +180,7 @@
                                 <h3 class="title">Čas sú peniaze. Ušetrite si ho <span></span></h3>
                             </div> <!-- section title -->
                             <p class="text">Vďaka online agende vašich firemných neprítomností ušetríte čas sebe aj vašim zamestnancomv. Už nebudete musieť vypisovať žiadne papierové žiadosti, dohadovať sa v emailoch alebo ústne.</p>
-                            <a href="https://app.nepritomnost.sk/register/" target="_blank" class="main-btn">vyskúšať zadarmo ↗</a>
+                            <a  title="registrácia"href="https://app.nepritomnost.sk/register/" target="_blank" class="main-btn">vyskúšať zadarmo ↗</a>
                         </div> <!-- about content -->
                     </div>
                     <div class="col-lg-6">
@@ -212,7 +210,7 @@
                                 <h3 class="title">Ideálny pre start-upy, malé <br>a stredné podnikanie  <span> </span></h3>
                             </div> <!-- section title -->
                             <p class="text">Rozrastáte sa a cítite potrebu utriasť firemné procesy? Neviažte sa zbytočne komplexnému informačnému systému. S našou aplikáciou získate nielen agendu firemných neprítomností, ale aj jednoduchý výkaz firemnej dochádzky po dňoch či adresár zamestnancov a telefónny zoznam.</p>
-                            <a href="https://app.nepritomnost.sk/register/" target="_blank" class="main-btn">vyskúšať zadarmo ↗</a>
+                            <a  title="registrácia" href="https://app.nepritomnost.sk/register/" target="_blank" class="main-btn">vyskúšať zadarmo ↗</a>
                         </div> <!-- about content -->
                     </div>
                     <div class="col-lg-6 order-lg-first">
@@ -255,7 +253,7 @@
                                     zadarmo
                                 </div>
                                 <div class="mt-4">
-                                    <a href="https://app.nepritomnost.sk/register/" target="_blank" class="btn btn-lg text-white btn-success">vyskúšať zadarmo ↗</a>
+                                    <a  title="registrácia" href="https://app.nepritomnost.sk/register/" target="_blank" class="btn btn-lg text-white btn-success">vyskúšať zadarmo ↗</a>
                                 </div>
                             </div>
                         </div> <!-- single team -->
@@ -279,7 +277,7 @@
                                     45&euro; / mesačne
                                 </div>
                                 <div class="mt-4">
-                                    <a href="https://app.nepritomnost.sk/register/" target="_blank" class="btn btn-lg text-white btn-success">vyskúšať zadarmo ↗</a>
+                                    <a  title="registrácia" href="https://app.nepritomnost.sk/register/" target="_blank" class="btn btn-lg text-white btn-success">vyskúšať zadarmo ↗</a>
                                 </div>
                             </div>
                         </div> <!-- single team -->
@@ -303,7 +301,7 @@
                                     105&euro; / mesačne
                                 </div>
                                 <div class="mt-4">
-                                    <a href="https://app.nepritomnost.sk/register/" target="_blank" class="btn btn-lg text-white btn-success">vyskúšať zadarmo ↗</a>
+                                    <a title="registrácia" href="https://app.nepritomnost.sk/register/" target="_blank" class="btn btn-lg text-white btn-success">vyskúšať zadarmo ↗</a>
                                 </div>
                             </div>
                         </div> <!-- single team -->
@@ -323,7 +321,7 @@
                                 <h3 class="title"><span>Appka pre</span> firemnú pohodu</h3>
                             </div> <!-- section title -->
                             <p class="text">Cieľom našej aplikácie je umožniť začínajúcim, menším a stredným podnikateľom nastaviť poriadok a prehľad vo firemnom dianí. Za rozumnú cenu a výhodný rozsah. </p>
-                            <a href="https://app.nepritomnost.sk/register/" target="_blank" class="main-btn">vyskúšať zadarmo ↗</a>
+                            <a title="registrácia" href="https://app.nepritomnost.sk/register/" target="_blank" class="main-btn">vyskúšať zadarmo ↗</a>
                         </div> <!-- about content -->
                     </div>
                     <div class="col-lg-6">
@@ -352,7 +350,7 @@
                                 <h3 class="title">E-mailové <span>notifikácie</span></h3>
                             </div> <!-- section title -->
                             <p class="text">O priebehu histórie a stavu každej žiadanky zamestnancov a schvaľovateľov informujú automatické e-mailové notifikácie.</p>
-                            <a href="https://app.nepritomnost.sk/register/" target="_blank" class="main-btn">vyskúšať zadarmo ↗</a>
+                            <a title="registrácia" href="https://app.nepritomnost.sk/register/" target="_blank" class="main-btn">vyskúšať zadarmo ↗</a>
                         </div> <!-- about content -->
                     </div>
                     <div class="col-lg-6 order-lg-first">
@@ -412,7 +410,7 @@
                                 <h3 class="title">Integrácia <span>do externých kalendárov</span></h3>
                             </div> <!-- section title -->
                             <p class="text">Zdieľajte svoje údaje s externými poskytovateľmi kalendárov, ako napríklad Microsoft Outlook, Apple Calendar (iCal) alebo Google Calendar.</p>
-                            <a href="https://app.nepritomnost.sk/register/" target="_blank" class="main-btn">vyskúšať zadarmo ↗</a>
+                            <a title="registrácia" href="https://app.nepritomnost.sk/register/" target="_blank" class="main-btn">vyskúšať zadarmo ↗</a>
                         </div> <!-- about content -->
                     </div>
                     <div class="col-lg-6 order-lg-first">
@@ -435,7 +433,7 @@
                                 <h3 class="title"><span>Adresár </span>zamestnancov</h3>
                             </div> <!-- section title -->
                             <p class="text">Zabezpečte, aby všetky kontaktné informácie pre vašich zamestnancov boli vždy k dispozícii pre prípad núdze a iných potrieb.. </p>
-                            <a href="https://app.nepritomnost.sk/register/" target="_blank" class="main-btn">vyskúšať zadarmo ↗</a>
+                            <a title="registrácia" href="https://app.nepritomnost.sk/register/" target="_blank" class="main-btn">vyskúšať zadarmo ↗</a>
                         </div> <!-- about content -->
                     </div>
                     <div class="col-lg-6">
@@ -495,12 +493,12 @@
                                     <h4 class="title">Ďaľšie info</h4>
                                 </div>
                                 <ul class="link">
-                                    <li><a href="/#!vseobecne-podmienky">Všeobecné obchodné podmienky</a></li>
-                                    <li><a href="/#!ochrana-osobnych-udajov">Ochrana osobných údajov</a></li>
-                                    <li><a href="/#!gdpr">GDPR</a></li>
-                                    <li><a href="/#!zasady-pouzivania-cookies">Cookies</a></li>
-                                    <li><a href="https://headwayapp.co/nepritomnost-changelog" target="_blank">Changelog ↗</a></li>
-                                    <li><a href="https://status.nepritomnost.sk" target="_blank">Server status ↗</a></li>
+                                    <li><a title="VOP" href="/#!vseobecne-podmienky">Všeobecné obchodné podmienky</a></li>
+                                    <li><a title="Osobne udaje" href="/#!ochrana-osobnych-udajov">Ochrana osobných údajov</a></li>
+                                    <li><a title="GDPR" href="/#!gdpr">GDPR</a></li>
+                                    <li><a title="Cookie" href="/#!zasady-pouzivania-cookies">Cookies</a></li>
+                                    <li><a title="Changelog" href="https://headwayapp.co/nepritomnost-changelog" target="_blank">Changelog ↗</a></li>
+                                    <li><a title="Status" href="https://status.nepritomnost.sk" target="_blank">Server status ↗</a></li>
                                 </ul>
                             </div> <!-- footer wrapper -->
                             <div class="link-wrapper " data-wow-duration="1s" data-wow-delay="0.6s">
@@ -508,9 +506,9 @@
                                     <h4 class="title">Aplikácia</h4>
                                 </div>
                                 <ul class="link">
-                                    <li><a target="_blank" href="https://app.nepritomnost.sk/login/">Prihásenie ↗</a></li>
-                                    <li><a target="_blank" href="https://app.nepritomnost.sk/register/">Registrácia firmy ↗</a></li>
-                                    <li><a target="_blank" href="https://app.nepritomnost.sk/forgot-password/">Zabudnuté heslo ↗</a></li>
+                                    <li><a title="Prihásenie" target="_blank" href="https://app.nepritomnost.sk/login/">Prihásenie ↗</a></li>
+                                    <li><a title="Registrácia firmy" target="_blank" href="https://app.nepritomnost.sk/register/">Registrácia firmy ↗</a></li>
+                                    <li><a title="Zabudnuté heslo" target="_blank" href="https://app.nepritomnost.sk/forgot-password/">Zabudnuté heslo ↗</a></li>
                                 </ul>
                             </div> <!-- footer wrapper -->
                         </div> <!-- footer link -->
@@ -534,14 +532,14 @@
                     <div class="col-lg-6">
                         <div class="copyright d-sm-flex justify-content-between">
                             <div class="copyright-content">
-                                <p class="text">Designed and Developed by <a href="https://formicka.sk" rel="nofollow">FORMIČKA</a></p>
+                                <p class="text">Designed and Developed by <a title="formicka" href="https://formicka.sk" rel="nofollow">FORMIČKA</a></p>
                             </div> <!-- copyright content -->
                         </div> <!-- copyright -->
                     </div>
                     <div class="col-lg-6">
                         <div class="copyright ">
                             <div class="copyright-content">
-                                <p class="text-sm-right float-sm-right"><a href="https://github.com/Formicka/nepritomnost.sk/issues?q=is%3Aissue" target="_blank">Našli ste chybu alebo máte otázku? ↗</a></p>
+                                <p class="text-sm-right float-sm-right"><a title="github" href="https://github.com/Formicka/nepritomnost.sk/issues?q=is%3Aissue" target="_blank">Našli ste chybu alebo máte otázku? ↗</a></p>
                             </div> <!-- copyright content -->
                         </div> <!-- copyright -->
                     </div>
