--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                         <div class="footer-link d-flex mt-50 justify-content-md-between">
                             <div class="link-wrapper " data-wow-duration="1s" data-wow-delay="0.4s">
                                 <div class="footer-title">
-                                    <h4 class="title">Ďaľšie info</h4>
+                                    <h4 class="title">Ďalšie info</h4>
                                 </div>
                                 <ul class="link">
                                     <li><a title="VOP" href="/#!vseobecne-podmienky">Všeobecné obchodné podmienky</a>
@@ -586,7 +586,7 @@
                                 </div>
                                 <ul class="link">
                                     <li><a title="Prihásenie" target="_blank"
-                                            href="https://app.nepritomnost.sk/login/">Prihásenie ↗</a></li>
+                                            href="https://app.nepritomnost.sk/login/">Prihlásenie ↗</a></li>
                                     <li><a title="Registrácia firmy" target="_blank"
                                             href="https://app.nepritomnost.sk/register/">Registrácia firmy ↗</a></li>
                                     <li><a title="Zabudnuté heslo" target="_blank"
