--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                                     <h4 class="title">Aplikácia</h4>
                                 </div>
                                 <ul class="link">
-                                    <li><a title="Prihásenie" target="_blank"
+                                    <li><a title="Prihlásenie" target="_blank"
                                             href="https://app.nepritomnost.sk/login/">Prihlásenie ↗</a></li>
                                     <li><a title="Registrácia firmy" target="_blank"
                                             href="https://app.nepritomnost.sk/register/">Registrácia firmy ↗</a></li>
