--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                                 <h3 class="title">Čas sú peniaze. Ušetrite si ho <span></span></h3>
                             </div> <!-- section title -->
                             <p class="text">Vďaka online agende vašich firemných neprítomností ušetríte čas sebe aj
-                                vašim zamestnancov. Už nebudete musieť vypisovať žiadne papierové žiadosti, dohadovať sa
+                                vašim zamestnancom. Už nebudete musieť vypisovať žiadne papierové žiadosti, dohadovať sa
                                 v emailoch alebo ústne.</p>
                             <a title="registrácia" href="https://app.nepritomnost.sk/register/" target="_blank"
                                 class="main-btn">vyskúšať zadarmo ↗</a>
