--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/default.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169313052-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -85,6 +86,17 @@
                                     <li class="nav-item">
                                         <a title="Kontakt" class="page-scroll" href="#about">Kontakt</a>
                                     </li>
+                                    <li class="nav-item dropdown d-none d-sm-block">
+                                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);" role="button" aria-haspopup="true" aria-expanded="false">Slovak</a>
+                                        <div class="dropdown-menu">
+                                          <a title="English" class="dropdown-item" href="https://mrfantom.com">
+                                            <span class="flag-icon  flag-icon-us"></span> English
+                                          </a>
+                                        </div>
+                                    </li>
+                                    <li class="nav-item d-block d-sm-none">
+                                        <a title="Kontakt" class="page-scroll" href="https://mrfantom.com"><span class="flag-icon  flag-icon-us"></span> English</a>
+                                    </li>                                    
                                 </ul>
                             </div> <!-- navbar collapse -->
 
@@ -92,6 +104,7 @@
                                 <a class="main-btn" title="Prihlásenie" target="_blank"
                                     href="https://app.nepritomnost.sk">Prihlásenie →</a>
                             </div>
+
                         </nav> <!-- navbar -->
                     </div>
                 </div> <!-- row -->
