--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                                     <li class="nav-item dropdown d-none d-sm-block">
                                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);" role="button" aria-haspopup="true" aria-expanded="false">Slovak</a>
                                         <div class="dropdown-menu">
-                                          <a title="English" class="dropdown-item" href="https://mrfantom.com">
+                                          <a title="English" class="dropdown-item" href="https://mrfantom.com?utm_source=nepritomnost">
                                             <span class="flag-icon  flag-icon-us"></span> English
                                           </a>
                                         </div>
                                     </li>
                                     <li class="nav-item d-block d-sm-none">
-                                        <a title="Kontakt" class="page-scroll" href="https://mrfantom.com"><span class="flag-icon  flag-icon-us"></span> English</a>
+                                        <a title="Kontakt" class="page-scroll" href="https://mrfantom.com?utm_source=nepritomnost"><span class="flag-icon  flag-icon-us"></span> English</a>
                                     </li>                                    
                                 </ul>
                             </div> <!-- navbar collapse -->
