--- a/index.html
+++ b/index.html
@@ -568,9 +568,14 @@
                                 zamestnancov alebo vybraných tímov.
                             </p>
                             <ul class="social">
-                                <li><a title="Github" href="https://github.com/Formicka"><i class="lni-github"></i></a>
+                                <li>
+                                    <a title="Github" href="https://github.com/Formicka"><i class="lni-github"></i></a>
                                 </li>
-
+                                <li>
+                                  <a title="English" href="https://mrfantom.com?utm_source=nepritomnost">
+                                    <i class="flag-icon rounded-circle flag-icon-us" style="width:22px;height:25px"></i>
+                                  </a>
+                                </li>
                             </ul>
                         </div> <!-- footer about -->
                     </div>
