--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                                 </li>
                                 <li>
                                   <a title="English" href="https://mrfantom.com?utm_source=nepritomnost">
-                                    <i class="flag-icon rounded-circle flag-icon-us" style="width:22px;height:25px"></i>
+                                    <i class="flag-icon rounded-circle flag-icon-us border border-dark" style="width:22px;height:22px"></i>
                                   </a>
                                 </li>
                             </ul>
