--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <meta property="twitter:image" content="https://nepritomnost.sk/assets/images/nepritomnost.sk.png">
     <link rel="shortcut icon" href="/favico.ico?v=1">
     <link rel="stylesheet" href="assets/css/slick.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="assets/css/LineIcons.css">
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/magnific-popup.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/default.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -87,16 +89,21 @@
                                         <a title="Kontakt" class="page-scroll" href="#about">Kontakt</a>
                                     </li>
                                     <li class="nav-item dropdown d-none d-sm-block">
-                                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);" role="button" aria-haspopup="true" aria-expanded="false">Slovak</a>
+                                        <a class="nav-link dropdown-toggle" data-toggle="dropdown"
+                                            href="javascript:void(0);" role="button" aria-haspopup="true"
+                                            aria-expanded="false">Slovak</a>
                                         <div class="dropdown-menu">
-                                          <a title="English" class="dropdown-item" href="https://mrfantom.com?utm_source=nepritomnost">
-                                            <span class="flag-icon  flag-icon-us"></span> English
-                                          </a>
+                                            <a title="English" class="dropdown-item"
+                                                href="https://mrfantom.com?utm_source=nepritomnost">
+                                                <span class="flag-icon  flag-icon-us"></span> English
+                                            </a>
                                         </div>
                                     </li>
                                     <li class="nav-item d-block d-sm-none">
-                                        <a title="Kontakt" class="page-scroll" href="https://mrfantom.com?utm_source=nepritomnost"><span class="flag-icon  flag-icon-us"></span> English</a>
-                                    </li>                                    
+                                        <a title="Kontakt" class="page-scroll"
+                                            href="https://mrfantom.com?utm_source=nepritomnost"><span
+                                                class="flag-icon  flag-icon-us"></span> English</a>
+                                    </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
 
@@ -119,7 +126,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-12 p-0">
                         <div class="header-hero-content text-center">
-                            <h3 class="header-sub-title">firemné neprítomnosti online</h3>
+                            <h3 class="header-sub-title wow fadeInUp">firemné neprítomnosti online</h3>
                             <h1 class="rotate">
                                 <div class="header-title text-uppercase rotate" data-delay="1200" data-words>
                                     <span class="text-anim-items">
@@ -213,6 +220,80 @@
                 </div> <!-- row -->
             </div> <!-- container -->
         </section>
+
+
+
+
+
+        <section id="testimonial" class="testimonial-area pt-120">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-5">
+                        <div class="section-title text-center pb-40">
+                            <div class="line m-auto"></div>
+                            <h3 class="title">Náhľad <span> aplikácie</span></h3>
+                        </div> <!-- section title -->
+                    </div>
+                </div> <!-- row -->
+                <div class="row testimonial-active " data-wow-duration="1s" data-wow-delay="0.8s">
+                    <div class="col-lg-4">
+                        <div class="single-testimonial h-100 d-flex justify-content-center align-items-center" style="min-height: 350px;">
+                            <div class="">
+                                <a class=" image-popup" href="assets/images/app/kalendar.png" >
+                                    <img  src="assets/images/app/kalendar.png" />
+                                </a>
+                            </div>
+                        </div> <!-- single testimonial -->
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="single-testimonial h-100 d-flex justify-content-center align-items-center" style="min-height: 350px;">
+                            <div class="">
+                                <a class=" image-popup" href="assets/images/app/tabulkaprehlad.png" >
+                                    <img  src="assets/images/app/tabulkaprehlad.png" />
+                                </a>
+                            </div>
+                        </div> <!-- single testimonial -->
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="single-testimonial h-100 d-flex justify-content-center align-items-center" style="min-height: 350px;">
+                            <div class="">
+                                <a class=" image-popup" href="assets/images/app/pridat.png" >
+                                    <img src="assets/images/app/pridat.png" />
+                                </a>
+                            </div>
+                        </div> <!-- single testimonial -->
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="single-testimonial h-100 d-flex justify-content-center align-items-center" style="min-height: 350px;">
+                            <div class="">
+                                <a class=" image-popup" href="assets/images/app/adresar.png" >
+                                    <img src="assets/images/app/adresar.png" />
+                                </a>
+                            </div>
+                        </div> <!-- single testimonial -->
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="single-testimonial h-100 d-flex justify-content-center align-items-center" style="min-height: 350px;">
+                            <div class="">
+                                <a class=" image-popup" href="assets/images/app/statistiky.png" >
+                                    <img src="assets/images/app/statistiky.png" />
+                                </a>
+                            </div>
+                        </div> <!-- single testimonial -->
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="single-testimonial h-100 d-flex justify-content-center align-items-center " style="min-height: 350px;">
+                            <div class="">
+                                <a class=" image-popup" href="assets/images/app/prehlad.png" >
+                                    <img src="assets/images/app/prehlad.png" />
+                                </a>
+                            </div>
+                        </div> <!-- single testimonial -->
+                    </div>
+                </div> <!-- row -->
+            </div> <!-- container -->
+        </section>
+
 
 
 
@@ -572,9 +653,10 @@
                                     <a title="Github" href="https://github.com/Formicka"><i class="lni-github"></i></a>
                                 </li>
                                 <li>
-                                  <a title="English" href="https://mrfantom.com?utm_source=nepritomnost">
-                                    <i class="flag-icon rounded-circle flag-icon-us border border-dark" style="width:22px;height:22px"></i>
-                                  </a>
+                                    <a title="English" href="https://mrfantom.com?utm_source=nepritomnost">
+                                        <i class="flag-icon rounded-circle flag-icon-us border border-dark"
+                                            style="width:22px;height:22px"></i>
+                                    </a>
                                 </li>
                             </ul>
                         </div> <!-- footer about -->
@@ -671,7 +753,9 @@
     <script src="assets/js/jquery.simple-text-rotator.min.js"></script>
     <script src="assets/js/slick.min.js"></script>
     <script src="assets/js/jquery.easing.min.js"></script>
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/scrolling-nav.js"></script>
+    <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/particles.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
