--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
                             <p class="text mt-3 d-none">webový a mobilný nástroj na správu neprítomnosti a dovoleniek
                                 vášho tímu</p>
                             <a title="registrácia" href="https://app.nepritomnost.sk/register/" target="_blank"
-                                class="main-btn ">vytvor si svoj tím ↗</a>
+                                class="main-btn wow fadeInUp">vytvor si svoj tím ↗</a>
                         </div> <!-- header hero content -->
                     </div>
                 </div> <!-- row -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="header-hero-image text-center" data-wow-delay="1.4s">
+                        <div class="header-hero-image text-center wow fadeIn" data-wow-delay="0.3s">
                             <img src="assets/images/header-hero.png" alt="hero">
                         </div> <!-- header hero image -->
                     </div>
